k8s/platform/argocd-ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.chalupatech.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: argocd-server
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-tls
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "dpi2.tailbecff0.ts.net"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.chalupatech.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls
